# async_fetcher

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest-e2e.ini  pytest-fast.ini  pytest.ini  requirements.txt  run_server.py  swagger_ui_test_checklist.md  test_api.py  test_api_debug.py  test_browser_direct.py  test_browser_pool.py  test_browser_pool_simple.py  test_curl_request.py  test_original_curl.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt  specs.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
api/: __init__.py  logic.py  main.py  models.py  rate_limiting.py  sanitization.py
docs/: LOGGING.md
research/: research.md
scripts/: dev.py
settings/: __init__.py  logger.py  logging_config.py  performance_metrics.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: conftest.py  test_browser_e2e.py  test_real_flaresolverr.py
tests/integration/: __init__.py  test_api.py  test_api_endpoints.py
tests/unit/: __init__.py  test_browser.py  test_cookie_manager.py  test_flaresolverr.py  test_logic.py  test_models.py  test_sanitization.py  test_simple_fetcher.py
toolkit/: __init__.py  browser.py  browser_pool.py  cookie_manager.py  flaresolverr.py  simple_fetcher.py
